added footer adjusted alignment of content and sidebar

--- a/index.html
+++ b/index.html
@@ -26,32 +26,30 @@
           </li>
         </ul>
       </div>
-    </nav>
+    </nav> <!-- Nav closed -->
     <div id="content" class="container">
       <div class="row">
-        <div class="col-ml-6">
+        <div class="col-lg-6 mx-auto">
           <h2>Bio</h2>
           <img class="float-left mr-3" src="http://via.placeholder.com/200x150" alt="">
           <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
-        <div class="col-ml-3">
-          <h3 class="">Social</h3>
+
+        <div class="col-lg-3 mx-auto">
+          <h3 class="text-center">Connect With Me</h3>
           <div class="row">
-            <div class="col-ml-4">
-                <a href="#"><img src="" alt=""></a>
-            </div>
-            <div class="col-ml-4">
-                <a href="#"><img src="" alt=""></a>
-            </div>
-            <div class="col-ml-4">
-                <a href="#"><img src="" alt=""></a>
+            <div class="mx-auto">
+              <a href="#"><img class="mr-2 ml-2" src="http://via.placeholder.com/50x50" alt=""></a>
+              <a href="#"><img class="mr-2" src="http://via.placeholder.com/50x50" alt=""></a>
+              <a href="#"><img src="http://via.placeholder.com/50x50" alt=""></a>
             </div>
           </div>
         </div>
 
-      </div>
-
-    </div>
-
+      </div> <!-- row close -->
+    </div> <!-- container close -->
+    <nav class="navbar navbar-light bg-light fixed-bottom">
+      <p class="mx-auto mt-3">&copy;copyright 2018 Daniel Feinstat</p>
+    </nav>
   </body>
 </html>
