--- a/portfolio.html
+++ b/portfolio.html
@@ -16,26 +16,102 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
     </nav> <!-- Nav closed -->
     <div id="content" class="container">
       <div class="row">
-        <div class="col-lg-6 mx-auto">
-          <h2>Bio</h2>
-          <img class="float-left mr-3" src="http://via.placeholder.com/200x150" alt="">
-          <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="col-md-8 mb-5">
+          <h2>Portfolio</h2>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="card bg-dark text-white text-center">
+                <img class="card-img" src="assets/images/project1.jpg" alt="Card image">
+                <div class="card-img-overlay cardOverlay">
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <h5 class="card-title cardTitle">Project 1</h5>
+                </div>
+              </div>
+            </div> <!--sub-column end -->
+            <div class="col-md-6">
+              <div class="card bg-dark text-white text-center">
+                <img class="card-img" src="assets/images/project2.jpg" alt="Card image">
+                <div class="card-img-overlay cardOverlay">
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <h5 class="card-title cardTitle">Project 2</h5>
+                </div>
+              </div>
+            </div> <!--sub-column end -->
+            <div class="col-md-6 mt-4">
+              <div class="card bg-dark text-white text-center">
+                <img class="card-img" src="assets/images/project3.jpg" alt="Card image">
+                <div class="card-img-overlay cardOverlay">
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <h5 class="card-title cardTitle">Project 3</h5>
+                </div>
+              </div>
+            </div> <!--sub-column end -->
+            <div class="col-md-6 mt-4">
+              <div class="card bg-dark text-white text-center">
+                <img class="card-img" src="assets/images/project4.jpg" alt="Card image">
+                <div class="card-img-overlay cardOverlay">
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <h5 class="card-title cardTitle">Project 4</h5>
+                </div>
+              </div>
+            </div> <!--sub-column end -->
+            <div class="col-md-6 mt-4 mb-5">
+              <div class="card bg-dark text-white text-center">
+                <img class="card-img" src="assets/images/project5.jpg" alt="Card image">
+                <div class="card-img-overlay cardOverlay">
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <h5 class="card-title cardTitle">Project 5</h5>
+                </div>
+              </div>
+            </div> <!--sub-column end -->
+
+          </div>
         </div>
 
-        <div class="col-lg-3 mx-auto">
+        <div class="col-md-4">
           <h3 class="text-center">Connect With Me</h3>
           <div class="row">
             <div class="mx-auto">
