added style and media queries

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Daniel Feinstat</a>
+      <a class="navbar-brand border-bottom border-dark" href="#">Daniel Feinstat</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -29,8 +29,8 @@
     </nav> <!-- Nav closed -->
     <div id="content" class="container">
       <div class="row">
-        <div class="col-lg-6 mx-auto">
-          <h2>Contact</h2>
+        <div class="col-md-7">
+          <h1 class="border-bottom border-dark">Contact</h1>
           <form>
             <div class="form-group">
               <label for="exampleInputEmail1">Name:</label>
@@ -48,16 +48,38 @@
         </form>
       </div>
 
-        <div class="col-lg-3 mx-auto">
-          <h3 class="text-center">Connect With Me</h3>
-          <div class="row">
-            <div class="mx-auto">
-              <a href="#"><img class="mr-2 ml-2" src="http://via.placeholder.com/50x50" alt=""></a>
-              <a href="#"><img class="mr-2" src="http://via.placeholder.com/50x50" alt=""></a>
-              <a href="#"><img src="http://via.placeholder.com/50x50" alt=""></a>
+      <div class="col-md-1">
+
+      </div>
+
+      <div class="col-md-3">
+        <div class="row pb-4 pt-1 bg-white border border-dark">
+          <div class="col-md-12">
+            <h3 class="text-center border-bottom border-dark">Connect With Me</h3>
+          </div>
+          <div class="col-md-1">
+
+          </div>
+          <div class="col-md-3">
+            <div class="card bg-light">
+              <a href="https://github.com/DanFeinstat"><img class="card-img" src="assets/images/github-128.png" alt="Card image">
+              </a>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card bg-light">
+              <a href="https://www.linkedin.com/in/daniel-feinstat-9b48b4156/"><img class="card-img" src="assets/images/linkedin-128.png" alt="Card image">
+              </a>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card bg-light">
+              <a href="https://stackoverflow.com/users/9211428/dfein"><img class="card-img" src="assets/images/stackoverflow-128.png" alt="Card image">
+              </a>
             </div>
           </div>
         </div>
+      </div>
 
       </div> <!-- row close -->
     </div> <!-- container close -->
