--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Daniel Feinstat</a>
+      <a class="navbar-brand border-bottom border-dark" href="#">Daniel Feinstat</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -27,21 +27,44 @@
         </ul>
       </div>
     </nav> <!-- Nav closed -->
+    
     <div id="content" class="container">
       <div class="row">
-        <div class="col-md-8">
-          <h2>Bio</h2>
+        <div class="col-md-7 bg-white border border-dark">
+          <h1 class="border-bottom border-dark">Bio</h1>
           <img class="float-left mr-3" src="http://via.placeholder.com/200x150" alt="">
           <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
 
-        <div class="col-md-4">
-          <h3 class="text-center">Connect With Me</h3>
-          <div class="row">
-            <div class="mx-auto">
-              <a href="#"><img class="mr-2 ml-2" src="http://via.placeholder.com/50x50" alt=""></a>
-              <a href="#"><img class="mr-2" src="http://via.placeholder.com/50x50" alt=""></a>
-              <a href="#"><img src="http://via.placeholder.com/50x50" alt=""></a>
+        <div class="col-md-1">
+
+        </div>
+
+        <div class="col-md-3">
+          <div class="row pb-4 pt-1 bg-white border border-dark">
+            <div class="col-md-12">
+              <h3 class="text-center border-bottom border-dark">Connect With Me</h3>
+            </div>
+            <div class="col-md-1">
+
+            </div>
+            <div class="col-md-3">
+              <div class="card bg-light">
+                <a href="https://github.com/DanFeinstat"><img class="card-img" src="assets/images/github-128.png" alt="Card image">
+                </a>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card bg-light">
+                <a href="https://www.linkedin.com/in/daniel-feinstat-9b48b4156/"><img class="card-img" src="assets/images/linkedin-128.png" alt="Card image">
+                </a>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card bg-light">
+                <a href="https://stackoverflow.com/users/9211428/dfein"><img class="card-img" src="assets/images/stackoverflow-128.png" alt="Card image">
+                </a>
+              </div>
             </div>
           </div>
         </div>
