added link to trivia game

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,11 +33,13 @@
           <h1 class="border-bottom border-dark">Portfolio</h1>
           <div class="row">
             <div class="col-md-6">
-              <div class="card bg-dark text-white text-center">
-                <img class="card-img" src="assets/images/project1.jpg" alt="Card image">
-                <div class="card-img-overlay cardOverlay">
-                  <h5 class="card-title cardTitle">Project 1</h5>
-                </div>
+              <a href="https://danfeinstat.github.io/TriviaGame/" target="_blank">
+                <div class="card bg-dark text-white text-center">
+                  <img class="card-img" src="assets/images/project1.jpg" alt="Card image">
+                  <div class="card-img-overlay cardOverlay">
+                    <h5 class="card-title cardTitle">Trivia Game</h5>
+                  </div>
+                </a>
               </div>
             </div> <!--sub-column end -->
             <div class="col-md-6">
