added a new project link to portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,16 +39,18 @@
                   <div class="card-img-overlay cardOverlay">
                     <h5 class="card-title cardTitle">Trivia Game</h5>
                   </div>
-                </a>
-              </div>
+                </div>
+              </a>
             </div> <!--sub-column end -->
             <div class="col-md-6">
-              <div class="card bg-dark text-white text-center">
-                <img class="card-img" src="assets/images/project2.jpg" alt="Card image">
-                <div class="card-img-overlay cardOverlay">
-                  <h5 class="card-title cardTitle">Project 2</h5>
+              <a href="https://danfeinstat.github.io/InfiniteGifs/" target="_blank">
+                <div class="card bg-dark text-white text-center">
+                  <img class="card-img" src="assets/images/project2.jpg" alt="Card image">
+                  <div class="card-img-overlay cardOverlay">
+                    <h5 class="card-title cardTitle">Gif Populator</h5>
+                  </div>
                 </div>
-              </div>
+              </a>
             </div> <!--sub-column end -->
             <div class="col-md-6 mt-4">
               <div class="card bg-dark text-white text-center">
